--- a/index.html
+++ b/index.html
@@ -65,19 +65,11 @@
 </style>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!--<div class="topnav">-->
-<!--    <div class="left">-->
-<!--     <p>We Provide Best Digital Marketing Services</p>-->
-<!--    </div>-->
-<!--    <div class="right">-->
-<!--        <p><a href="#">Contact Us</a><a href="#">About Us</a></p>-->
-<!--    </div>-->
-<!--</div>-->
+
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="index.php" style="text-transform: uppercase;"><img src="/assets/img/comp_logo.png" width="100px" /></a>
+        <a class="navbar-brand" href="index.php" style="text-transform: uppercase;"><img src="comp_logo.png" width="100px" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile_nav" aria-controls="mobile_nav" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span> 
         </button>
@@ -178,7 +170,7 @@
 <div class="container col-xxl-8 px-4 py-5" >
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6 ">
-        <img src="assets/img/hero-img.png" class="d-block mx-lg-auto img-fluid object" loading="lazy">
+        <img src="hero-img.png" class="d-block mx-lg-auto img-fluid object" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3" style="font-weight: 700; color: #fff"><span style="text-transform: uppercase; text-shadow: 2px 2px #ff0000;">We Provide Experts in</span> <br><span class="type"></span></h1>
@@ -432,9 +424,9 @@
 <div class="row">
 
     <section class="logo-carousel slider" data-arrows="true" style="display:flex;">
-      <div class="slide"><img src="assets/img/Microsoft_logo.png"></div>
+      <div class="slide"><img src="Microsoft_logo.png"></div>
       <div class="slide"><img src="https://codingcush.com/uploads/logo/logo_61b79976c34f5.png"></div>
-      <div class="slide"><img src="/assets/img/comp_logo.png"></div>
+      <div class="slide"><img src="comp_logo.png"></div>
       <div class="slide"><img src="https://1.bp.blogspot.com/-JWbtTwRvaR4/YPplN-2t6fI/AAAAAAAAGac/hgQmKIe2s00SW-_muJHhV1OQdDB083KkQCLcBGAsYHQ/s390/lexdigital-blog-logo.png"></div>
       <div class="slide"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJE6wJ5TvXvIxkb8qt5HIm8VTHr1G56WObzQ&s"></div>
       
@@ -462,8 +454,8 @@
                             <i style="color: #3B5998;" class="fas fa-phone"></i>
                             <div class="cta-text">
                                 <h4>Call us</h4>
-                                <span>Anshika : +91-9321872235</span>
-                                <span>Mohit :+91-9686574561</span>
+                                <span> +91-9321872235</span>
+                               
                             </div>
                         </div>
                     </div>
@@ -483,7 +475,7 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.php"><img src="/assets/img/comp_logo.png" class="img-fluid" alt="logo"></a>
+                                <a href="index.php"><img src="comp_logo.png" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing
