--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             </header>
             <div class="container">
                  <div class="hero-pic">
-                    <img src="/assets/img/comp_logo.png" alt="Company Logo ">
+                    <img src="comp_logo.png" alt="Company Logo ">
                  </div>
                  <div class="hero-text">
                     <h5>Hi I'm <span class="input">Digital Expert Solutioner </span></h5>
