--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="assets/css/footer.css">
+<link rel="stylesheet" href="footer.css">
 <style>
     .card-deck> .card{
         border-radius: 15px;
