--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
             </li>
             <!--=========-->
-            <li class="nav-item"><a class="nav-link" href="/portfolio.html">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="/index.html">Contact us</a></li>
    
         </ul>
